2007-12-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list_related.cc: create_layout_get_layout(), 
	get_fields_to_show():
	* glom/mode_data/dialog_layout_list_related.cc: update_ui():
	Do not try to insert at position 0 of an empty std::vector, to prevent crashes.
	I introduced this problem on 2007-11-17.

2007-12-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/application.h: ui_file_select_open_with_browse(), 
	open_browsed_document(): Remove the BrowsedServer inner class and instead use 
	EpcServiceInfo and a service_name string. This reduces the amount of code.

2007-12-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: open_browsed_document(): Adapt to the latest 
	libepc API, using the EpcServiceInfo object.

2007-12-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Rename --disable-doc to --disable-doc-utils to be 
	clearer, and move the check lower in configure.ac because it was 
	somehow causing the check for pkg-config to fail. 

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* Makefile.am: Added --disable-doc configure option, because 
	Maemo has no gnome-doc-utils. This was copied partly from Ekiga.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:  Mention dragbar.h to fix the 
	dist.
	* icons/16x16/Makefile.am: Dist pixmaps_DATA.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am: Mention dragbar.h to fix the 
	dist.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Remove dialog_connection_error.
	* glom/application.cc:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Replace use of dialog_connection_error 
	with Utils::show_ok_dialog(), so we can use a Hildon::Note 
	on Maemo.

2007-12-01  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/appstate.cc: Constructor: Make sure that we 
	default to operator mode for client-only mode.
	* glom/glom.glade: