@@ -1,5 +1,14 @@
 2007-12-04  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/application.cc: on_document_load(): Call set_get_document_func() earlier 
+	so that the connection pool always has it.
+	* glom/libglom/connectionpool.cc: connect(): Start avahi publihsing here if it has 
+	not already been started, so we publish databases that are centrally-hosted too.
+	However, we need to do this only for the first user. 
+	on_sharedconnection_finished(): stop avahi.
+
+2007-12-04  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_data/box_data_list_related.cc: create_layout_get_layout(), 
 	get_fields_to_show():
 	* glom/mode_data/dialog_layout_list_related.cc: update_ui():
